2008-05-06  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_message_area_update): move metatheme
	validation code to common/gnome-theme-info.c

2008-05-04  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* gnome-wp-info.c: (gnome_wp_info_new), (gnome_wp_info_free):
	* gnome-wp-info.h:
	* gnome-wp-item.c: (gnome_wp_item_new),
	(gnome_wp_item_update_description):
	* gnome-wp-item.h: even more gio migration

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_get_mtime),
	(theme_drag_data_received_cb):
	* theme-util.c: (directory_delete_recursive),
	(file_delete_recursive), (theme_is_writable), (theme_delete): port a
	few more functions to gio (part of bug #524401)

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Lincoln de Sousa <lincoln@minaslivre.org>

	* appearance-desktop.c: (wp_drag_received), (wp_update_preview): more
	gio conversion (part of bug #524401)

2008-05-01  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): update for changes in the
	theme-info API

2008-04-20  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_thumbnail_in_treeview):
	* appearance-themes.c: (theme_thumbnail_update),
	(theme_thumbnail_generate): adapt to modified refcounting in the
	thumbnailer; thumbnails don't need to be unref'ed unless we explicitly
	retain a reference

2008-04-19  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* appearance-themes.c: (theme_validate),
	(theme_message_area_update), (themes_init):
	* appearance.h: show a warning message when the selected theme is
	incomplete (e.g. missing icon theme or gtk theme engine)

2008-04-17  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Lincoln de Sousa <lincoln@minaslivre.org>

	* gnome-wp-xml.c (gnome_wp_file_changed), (gnome_wp_xml_add_monitor),
	(gnome_wp_xml_load_from_dir), (gnome_wp_xml_load_list): replace gnome-vfs by
	gio (part of bug #524401)
