@@ -1,3 +1,10 @@
+2008-05-07  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Lincoln de Sousa <lincoln@minaslivre.org>
+
+	* theme-save.c: (setup_directory_structure), (write_theme_to_disk):
+	replace some more gnome-vfs by gio (part of bug #524401)
+
 2008-05-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* Makefile.am:
